--- a/src/components/ConnectWalletModal/ManualAddressInput.css
+++ b/src/components/ConnectWalletModal/ManualAddressInput.css
@@ -1,38 +1,62 @@
 .manual-address-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .manual-address-container h2 {
-    font-size: 18px;
-    color: #fff;
-    margin-bottom: 15px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.manual-address-container h2 {
+  font-size: 18px;
+  color: #f5f5f5;
+  margin-bottom: 15px;
+}
+
+.manual-address-input {
+  padding: 10px;
+  width: 100%;
+  max-width: 300px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  background-color: #1a1a1a;
+  color: #fff;
+}
+
+.manual-address-input::placeholder {
+  color: #ccc;
+}
+
+.validation-feedback {
+  text-align: center;
+}
+
+.valid-address {
+  color: #28a745;
+  font-size: 14px;
+}
+
+.invalid-address {
+  color: #BF4024;
+  font-size: 14px;
+}
+
+.balance-display {
+  color: #fff;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+.balance-display strong {
+  color: #00aaff;
+}
+
+
+
+/* Responsive Design */
+@media (max-width: 1000px) {
   .manual-address-input {
-    padding: 10px;
-    width: 100%;
-    max-width: 300px;
-    font-size: 16px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
+    max-width: none;
+    width: 80%;
   }
-  
-  .valid-address {
-    color: green;
-  }
-  
-  .invalid-address {
-    color: red;
-  }
-  
-  @media (max-width: 1000px) {
-    .manual-address-input {
-      max-width: none;
-      width: 80%;
-    }
-  }
-  
+}
