--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*, *::before, *::after {
+  *, *::before, *::after {
   box-sizing: border-box;
 }
 
@@ -7,12 +7,12 @@ html, body, #root {
   margin: 0;
   padding: 0;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background-color: var(--background-color);
-  color: var(--text-color);
+  background-color: #141618;
+  color: #333;
 }
 
 a {
-  color: var(--link-color);
+  color: #1a0dab;
   text-decoration: none;
 }
 
@@ -24,12 +24,13 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
+  justify-content: center;
+  height: 100%;
 }
 
 .spinner {
-  border: 8px solid #f3f3f3; 
-  border-top: 8px solid var(--button-bg);
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #00aaff;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -46,32 +47,20 @@ a:hover {
   position: fixed;
   top: 20px;
   right: 20px;
-  background-color: var(--button-bg);
-  color: var(--button-text);
+  background-color: #4bc0c0;
+  color: white;
   border: none;
   padding: 10px 15px;
   cursor: pointer;
   border-radius: 4px;
   z-index: 1000;
+  transition: background-color 0.3s;
 }
 
 .theme-toggle-button:hover {
   background-color: #3da9a9;
 }
 
-/* Variable Definitions */
-:root {
-  --background-color: #141618;
-  --text-color: #333333;
-  --link-color: #1a0dab;
-  --button-bg: #4bc0c0;
-  --button-text: #ffffff;
-}
-
-.dark-mode {
-  --background-color: #121212;
-  --text-color: #e0e0e0;
-  --link-color: #8ab4f8;
-  --button-bg: #4bc0c0;
-  --button-text: #ffffff;
+.coin-list-container::-webkit-scrollbar {
+  display: none;
 }
